@@ -8,7 +8,7 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.lang.reflect.Field;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Set;
 import java.util.TreeSet;
@@ -178,7 +178,7 @@ public class Config{
 	// Charge les valeurs par defaut et les checks de type de la configuration
 	private static void loadDefaults() {
 		Predicate<String> checkString = str -> str != null && !str.isEmpty();
-		Predicate<String> checkDir = str -> str != null && Files.isDirectory(Path.of(str));
+		Predicate<String> checkDir = str -> str != null && Files.isDirectory(Paths.get(str));
 		Predicate<String> checkInt = str -> {
 			try {
 				Integer.parseInt(str);
@@ -192,15 +192,13 @@ public class Config{
 		Predicate<String> checkKey = str -> stringToKey(str) != -1;
 		
 		//Default configuration and type checks
-		config.put(ConfigKey.MAP_DIRECTORY, "assets/maps/");
-		checks.put(ConfigKey.MAP_DIRECTORY, checkDir);
 		config.put(ConfigKey.LOG_LEVEL, "2");
 		checks.put(ConfigKey.LOG_LEVEL, checkInt);	
 		
 		
 		// Default configuration for keys
 		// Regarder la class Controle pour savoir l'ordre
-		String[] keyDefaults = {"UP", "DOWN", "RIGHT", "LEFT", "A", "Q"};
+		String[] keyDefaults = {"UP", "DOWN", "RIGHT", "LEFT", "SPACE"};
 		Controle[] controles = Controle.values();
 		
 		// On prend que les version "en mode appuye" de base des controles 
